feat(Modal): 添加确认弹窗并集成vue-toastification提示
- 重构Modal组件，支持点击遮罩层关闭弹窗
- 添加取消和确认按钮，并优化样式
- 使用v-model替代isVisible和close事件
- 在Timeline组件中集成Modal，添加确认加入计划功能
- 引入vue-toastification库，用于显示操作成功或失败的提示信息

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pinia": "^2.2.7",
     "qrcode": "^1.5.4",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@types/bun": "latest",
