--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/chart.js": "^2.9.41",
-    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "echarts": "^5.6.0",
     "lucide-vue-next": "^0.461.0",
     "pinia": "^2.2.7",
     "qrcode": "^1.5.4",
@@ -22,8 +21,11 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/chart.js": "^2.9.41",
+    "@types/node": "^22.13.14",
     "@types/qrcode": "^1.5.5",
     "@vitejs/plugin-vue": "^5.1.4",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "sass": "^1.80.4",
